--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,3 +1,4 @@
+#Mensagem de exceção da Arquitetura - presentes arqui para sobrescrever a configuração se necessário
 ME001=Applicaton found unexpected error. Please contact the Administrator. Error Description: {0}.
 ME002=Record not found.
 ME003=Error in DB:  {0}.
