--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -1,3 +1,4 @@
+#Mensagem de exceção da Arquitetura - presentes arqui para sobrescrever a configuração se necessário
 ME001=A aplica\u00E7\u00E3o encontrou um erro inesperado. Favor contactar o Administrador. Descri\u00E7\u00E3o do erro: {0}.
 ME002=Nenhum registro encontrado.
 ME003=Erro no BD:  {0}.
