Versão inicial-Implementação Spring Security

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,7 +1,12 @@
 #Mensagem de exceção da Arquitetura - presentes arqui para sobrescrever a configuração se necessário
 ME001=Applicaton found unexpected error. Please contact the Administrator. Error Description: {0}.
-ME002=Record not found.
-ME003=Error in DB:  {0}.
+ME002=Nenhum registro encontrado.
+ME003=Erro no BD:  {0}.
+ME004=Token JWT inv\u00E1lido
+ME005=Campo Obrigatorio
+ME006=Usu\u00E1rio n\u00E3o encontrado
+ME007=Usu\u00E1rio e/ou senha n\u00E3o confere.
+ME008=Usu\u00E1rio inativo!!!
 
 MSG-001=Campo obrigat\u00F3rio n\u00E3o preenchido.
 MSG-002=Opera\u00E7\u00E3o realizada com sucesso.
