--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -2,7 +2,11 @@
 ME001=A aplica\u00E7\u00E3o encontrou um erro inesperado. Favor contactar o Administrador. Descri\u00E7\u00E3o do erro: {0}.
 ME002=Nenhum registro encontrado.
 ME003=Erro no BD:  {0}.
+ME004=Token JWT inv\u00E1lido
+ME005=Campo Obrigatorio
+ME006=Usu\u00E1rio n\u00E3o encontrado
+ME007=Usu\u00E1rio e/ou senha n\u00E3o confere.
+ME008=Usu\u00E1rio inativo!!!
 
-MSG-001=Campo obrigat\u00F3rio n\u00E3o preenchido: {0}.
+MSG-001=Campo obrigat\u00F3rio n\u00E3o preenchido.
 MSG-002=Opera\u00E7\u00E3o realizada com sucesso.
-
