ADD - Gerenciar Local e Chaves

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,8 +5,11 @@ ME003=Erro no BD:  {0}.
 ME004=Token JWT inv\u00E1lido
 ME005=Campo Obrigatorio
 ME006=Usu\u00E1rio n\u00E3o encontrado
-ME007=Usu\u00E1 rio e/ou senha n\u00E3o confere.
-ME008=Usu\u00E1 rio inativo!!!
+ME007=Usu\u00E1rio e/ou senha n\u00E3o confere.
+ME008=Usu\u00E1rio inativo!!!
 
 MSG-001=Campo obrigat\u00F3rio n\u00E3o preenchido.
 MSG-002=Opera\u00E7\u00E3o realizada com sucesso.
+MSG-003=Chave n\u00E3o pode ser removida, j\u00E1 foi emprestada.
+MSG-004=N\u00FAmero de Chave j\u00E1 exite.
+MSG-005=Local j\u00E1 existe.
